# rcli

./: .pre-commit-config.yaml  Cargo.toml
assets/: README.md
assets/picture/: textsign.excalidraw
fixtures/: blake3.txt
src/: lib.rs  main.rs  opts.rs  process.rs  utils.rs
src/cli/: base64.rs  csv.rs  genpass.rs  http.rs  jwt.rs  mod.rs  text.rs
src/process/: b64.rs  csv_convert.rs  gen_pass.rs  http_serve.rs  jwt.rs  mod.rs  text.rs
