[package]
name = "rcli"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
blake3 = "1.8.2"
clap = { version = "4.5.37", features = ["derive"] }
csv = "1.3.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.33"
zxcvbn = "3.1.0"
rand = "0.8.5"                                                  # 强制使用和 ed25519-dalek 兼容的版本
tokio = { version = "1.45.0", features = ["rt", "rt-multi-thread", "macros", "net", "fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
axum = { version = "0.8.4", features = ["http2", "query", "tracing"] }
tower-http = { version = "0.6.4", features = ["compression-full", "cors", "tracing", "fs"] }
enum_dispatch = "0.3.13"
jsonwebtoken = "9.3.1"
